--- a/Backend/pom.xml
+++ b/Backend/pom.xml
@@ -44,6 +44,11 @@
       <version>4.0.0</version>
       <scope>compile</scope>
     </dependency>
+    <dependency>
+      <groupId>com.offbytwo.jenkins</groupId>
+      <artifactId>jenkins-client</artifactId>
+      <version>0.3.8</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
